# rpa-elysium

./: .editorconfig  .guix-channel  CITATION.cff  Cargo.toml  README.adoc  ROADMAP.adoc  RSR_COMPLIANCE.adoc  STATE.scm  codemeta.json  guix.scm  justfile  rpa-elysium_README.md
.github/workflows/: codeql.yml  guix-nix-policy.yml  npm-bun-blocker.yml  quality.yml  rsr-antipattern.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
crates/rpa-core/: Cargo.toml
crates/rpa-core/src/: action.rs  error.rs  event.rs  lib.rs  workflow.rs
crates/rpa-fs-workflow/: Cargo.toml
crates/rpa-fs-workflow/src/: config.rs  lib.rs  main.rs  runner.rs  watcher.rs
crates/rpa-fs-workflow/src/actions/: archive.rs  copy.rs  delete.rs  mod.rs  move_file.rs  plugin.rs  rename.rs
crates/rpa-plugin/: Cargo.toml
crates/rpa-plugin/src/: api.rs  error.rs  host.rs  lib.rs  permissions.rs  sandbox.rs
docs/: CITATIONS.adoc
examples/: archive-workflow.json  backup-workflow.json  plugin-workflow.json  workflow.ncl
