# SPDX-License-Identifier: MIT OR AGPL-3.0-or-later
# SPDX-FileCopyrightText: 2024 Hyperpolymath <hyperpolymath@proton.me>

[package]
name = "rpa-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Plugin API and WASM sandbox for RPA Elysium"

[dependencies]
rpa-core = { path = "../rpa-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
wasmtime = { workspace = true }
uuid = { workspace = true }
